[gd_scene load_steps=3 format=3 uid="uid://bu45h1nxjc133"]

[ext_resource type="Script" path="res://Objects/Items/ShopItem.gd" id="1_yksaf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhptm"]
size = Vector2(80, 145)

[node name="ShopItem" type="RigidBody2D"]
freeze = true
script = ExtResource("1_yksaf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_yhptm")

[node name="Tooltip" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -263.0
offset_right = -43.0
offset_bottom = 82.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_input"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_hover"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_leave"]
